added route to get logos
